<resources>
    <string name="app_name"> </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>.
    <string name="titulo">Bienvenido a la Trivia</string>
    <string name="name">Escribe tu Nombre</string>
    <string name="start_btn">Comenzar a Jugar</string>
    <string name="today_questions">Nuestra Trivia de Hoy</string>
    <string name="img_content_description">xhb</string>
    <string name="hellow_player">Hola, %1$s!</string>
    <string name="radio_group_quest"> </string>
    <string name="question">¿A qué lenguaje o herramienta de programación pertenece la imagen?</string>
    <string name="radio_question_1">Visual Studio</string>
    <string name="radio_question_2">Borland C++</string>
    <string name="radio_question_3">Android Studio</string>
    <string name="radio_question_4">Harbour/xHarbour</string>
    <string name="radio_question_5">Java</string>
    <string name="sendAnswer">Enviar Respuesta</string>
    <string name="felicitaciones">¡¡¡ Felicitaciones !!!</string>
    <string name="winnerMessage">¡ Genial %1$s, Ganaste la Trivia !</string>
    <string name="buttonTryText">Ganaste, Intentalo otra vez</string>
    <string name="perdiste">¡¡¡ Debes estudiar Mas !!!</string>
    <string name="loserMessage">¡ Estuviste cerca %1$s, tu respuesta es incorrecta !</string>
    <string name="buttonTextLoser">Vuelve a intentalo...</string>
</resources>