<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WinnerFragment" >

    <TextView
        android:id="@+id/messageWin"
        android:layout_width="412dp"
        android:layout_height="46dp"
        android:background="@color/material_dynamic_secondary40"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/felicitaciones"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/felicitaciones" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="385dp"
        android:layout_height="65dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/winnerMessage"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_secondary40"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageWin" />

    <Button
        android:id="@+id/againButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTryText"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>