<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Loser_Fragment" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="385dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/loserMessage"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_secondary40"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/againButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageWin2"
        app:layout_constraintVertical_bias="0.282" />

    <Button
        android:id="@+id/againButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:text="@string/buttonTextLoser"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/messageWin2"
        android:layout_width="412dp"
        android:layout_height="46dp"
        android:background="@color/material_dynamic_secondary40"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/perdiste"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/perdiste" />

</androidx.constraintlayout.widget.ConstraintLayout>